feature: add part feature